--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">Nosotros</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Precios</a></li>
+                    <li class="nav-item"><a href="precios.html" class="nav-link">Precios</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Terminos y Condiciones</a></li>
                     <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
                 </ul>
