use card in hotel and added tarjetas plus folder images with card

--- a/index.html
+++ b/index.html
@@ -74,77 +74,128 @@
             <hr>
             <!-- =========HOTELES========== -->
             <div class="d-flex flex-wrap flex-row-reverse">
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel Barcelona</h4>
-                        <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
+                <!-- hotel 1 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <!-- <div class="card-header">
+                        Club Barcelon
+                    </div> -->
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <img class="card-img-top" src="/images/barcelona.png" alt="hotel barcelona image">
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
                     </div>
                     <div>
                         <button class="btn btn-primary btn-reserva">
-                            <span class="oi oi-plus"></span> Reservar</button>
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
                     </div>
                 </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel Buenos Aires</h4>
-                        <p>Hotel ubicado en pleno fineas y fer centro.</p>
+                <!-- hotel 2 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Buenos Aires</h5>
+                        <h6 class="card-subtitle text-muted">Argentina</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
-                    </div>
-                </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel Lima</h4>
-                        <p>Hotel ubicado entre llamas.</p>
-                    </div>
-                    <div>
-                        <button class="btn btn-primary btn-reserva "><span class="oi oi-plus"></span> Reservar</button>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
                     </div>
                 </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel Rio de Janeiro</h4>
-                        <p>Hotel ubicado con monos de toda las clases.</p>
+                <!-- hotel 3 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Lima</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
-                    </div>
-                </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel La Paz</h4>
-                        <p>Hotel ubicado en pleno centro de la plaza bolivia.</p>
-                    </div>
-                    <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
                     </div>
                 </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel Madrid</h4>
-                        <p>Hotel ubicado en pleno centro de los de mi pinga.</p>
+                <!-- hotel 4 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
-                    </div>
-                </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel San Pablo</h4>
-                        <p>Hotel ubicado en la ciudad de cusco.</p>
-                    </div>
-                    <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
                     </div>
                 </div>
-                <div class="col-sm-3 card-hotel d-flex flex-column justify-content-between">
-                    <div>
-                        <h4>Hotel EEUU</h4>
-                        <p>Hotel ubicado entre los negros de estados unidos.</p>
+                <!-- hotel 5 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-reserva"><span class="oi oi-plus"></span> Reservar</button>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
+                    </div>
+                </div>
+                <!-- hotel 6 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
+                    </div>
+                </div>
+                <!-- hotel 7 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
+                    </div>
+                </div>
+                <!-- hotel 8 -->
+                <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hotel Barcelona</h5>
+                        <h6 class="card-subtitle text-muted">España</h6>
+                        <p class="card-text">
+                            Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
+                        </p>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-reserva">
+                            <span class="oi oi-plus"></span> Reservar
+                        </button>
                     </div>
                 </div>
 
