--- a/precios.html
+++ b/precios.html
@@ -118,6 +118,21 @@
                     </tr>
                 </tbody>
             </table>
+            
+        </div>
+
+        <!-- Tarjetas -->
+        <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header" style="background-color: blue; color:white;">
+                    Tarjetas Aceptadas
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Targeta Basica</li>
+                    <li class="list-group-item">Tarjeta VIP</li>
+                    <li class="list-group-item">Tarjeta Black</li>
+                </ul>
+            </div>
         </div>
 
 
