added files imgades for card respondive (img fluid)

--- a/index.html
+++ b/index.html
@@ -72,17 +72,18 @@
             </div>
 
             <hr>
+
+            <img class="img-fluid" src="/images/background.jpg" alt="respondive imges">
+
             <!-- =========HOTELES========== -->
             <div class="d-flex flex-wrap flex-row-reverse">
                 <!-- hotel 1 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
-                    <!-- <div class="card-header">
-                        Club Barcelon
-                    </div> -->
+                    <img class="img-fluid card-img-top" src="/images/img1.png" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
-                        <img class="card-img-top" src="/images/barcelona.png" alt="hotel barcelona image">
+                        <!-- <img class="card-img-top" src="/images/barcelona.png" alt="hotel barcelona image"> -->
                         <p class="card-text">
                             Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.
                         </p>
@@ -95,6 +96,7 @@
                 </div>
                 <!-- hotel 2 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img2.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Buenos Aires</h5>
                         <h6 class="card-subtitle text-muted">Argentina</h6>
@@ -110,6 +112,7 @@
                 </div>
                 <!-- hotel 3 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img3.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Lima</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
@@ -125,6 +128,7 @@
                 </div>
                 <!-- hotel 4 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img4.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
@@ -140,6 +144,7 @@
                 </div>
                 <!-- hotel 5 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img5.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
@@ -155,6 +160,7 @@
                 </div>
                 <!-- hotel 6 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img6.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
@@ -170,6 +176,7 @@
                 </div>
                 <!-- hotel 7 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img7.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
@@ -185,6 +192,7 @@
                 </div>
                 <!-- hotel 8 -->
                 <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                    <img class="img-fluid card-img-top" src="/images/img8.jpg" alt="respondive imges">
                     <div class="card-body">
                         <h5 class="card-title">Hotel Barcelona</h5>
                         <h6 class="card-subtitle text-muted">España</h6>
